--- a/tailwind-compiled-styles.css
+++ b/tailwind-compiled-styles.css
@@ -520,11 +520,6 @@ video {
   order: 9999;
 }
 
-.mx-6 {
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
-}
-
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -554,8 +549,8 @@ video {
   display: flex;
 }
 
-.h-72 {
-  height: 18rem;
+.h-80 {
+  height: 20rem;
 }
 
 .h-screen {
@@ -570,21 +565,17 @@ video {
   width: 75%;
 }
 
-.w-72 {
-  width: 18rem;
-}
-
 .w-80 {
   width: 20rem;
+}
+
+.w-\[35vw\] {
+  width: 35vw;
 }
 
 .w-fit {
   width: -moz-fit-content;
   width: fit-content;
-}
-
-.w-\[35vw\] {
-  width: 35vw;
 }
 
 .w-full {
@@ -626,6 +617,15 @@ video {
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.pb-10 {
+  padding-bottom: 2.5rem;
+}
+
 .pb-12 {
   padding-bottom: 3rem;
 }
@@ -640,10 +640,6 @@ video {
 
 .pt-16 {
   padding-top: 4rem;
-}
-
-.pb-10 {
-  padding-bottom: 2.5rem;
 }
 
 .text-center {
