--- a/tailwind-compiled-styles.css
+++ b/tailwind-compiled-styles.css
@@ -561,6 +561,18 @@ video {
   height: 18rem;
 }
 
+.h-\[400px\] {
+  height: 400px;
+}
+
+.h-full {
+  height: 100%;
+}
+
+.h-\[320px\] {
+  height: 320px;
+}
+
 .max-h-72 {
   max-height: 18rem;
 }
